--- a/index.html
+++ b/index.html
@@ -1,13 +1,77 @@
 <!doctype html>
-
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Music History</title>
-</head>
+	
+	<head>
+		<link rel="stylesheet" href="css/main.css">
+		<meta charset="utf-8">
+		<title>Music History</title>
+	</head>
+	
+	<div class="page-box">
+	<header>
+		<nav>
+			<ul>
+				<li><a href="index.html">View Music</a> |</li>
+				<li><a href="#">Add Music</a> |</li>
+				<li><a href="#">Profile</a></li>
+			</ul>
+		</nav>
+	</header>	
+		
+	<body>
+		<div class="body-box">
+			<section class="filter-bar">
+				<div id="song-length">
+					<p>Song length:</p>
+					//song length selector bar//
+				</div>	
+				<div>
+					<p>Artist:</p>
+					//artist selector//
+				</div>
+				<div>
+					<p>Album:</p>
+					//album selector//
+				</div>
+				<div>
+					<p>Genre:</p>
+					//genre selector//
+				</div>
+			</section>
+			
+			<section class="songlist-bar">
+				<div>
+					<h1 class="song-title">SONG NAME</h1>
+					<ul>
+						<li>artist |</li>
+						<li>album |</li>
+						<li>genre</li>
+					</ul>
+				</div>
 
-<body>
+				<div>
+					<h1 id="song-title">SONG NAME</h1>
+					<ul>
+						<li>artist |</li>
+						<li>album |</li>
+						<li>genre</li>
+					</ul>
+				</div>
 
+				<div>
+					<h1 class="song-title">SONG NAME</h1>
+					<ul>
+						<li>artist |</li>
+						<li>album |</li>
+						<li>genre</li>
+					</ul>
+				</div>
+			</section>
+		</div>
+	</body>
+	</div>
+	
+	<footer>
+	</footer>
 
-</body>
 </html>
