add br after each song in js

--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
 					<label for="artist">Artist:</label>		
 					<select type="select" name="artists" id="artist-select">
 						<option selected disabled>Options</option>
-						<option>Artist 1</option>
-						<option>Artist 2</option>
-						<option>Artist 3</option>
-						<option>Artist 4</option>
+						<option>Grateful Dead</option>
+						<option>ZZ Top</option>
+						<option>Supertramp</option>
+						<option>Pink Floyd</option>
+						<option>Guns & Roses</option>
+						<option>Alanis Morisette</option>
+						<option>Marvin Gaye</option>
+						<option></option>
 					</select>
 				</div>
 				
@@ -62,14 +66,14 @@
 				<div id="genre-select">	
 					<label for="genre">Genre:</label><br>
 					<div id="radio-col1">
-						<input type="checkbox" name="album" value="Rock">Rock<br>
-						<input type="checkbox" name="album" value="Rap ">Pop<br>
-						<input type="checkbox" name="album" value="Country">Country<br>
+						<input type="checkbox" name="album" value="rock">Rock<br>
+						<input type="checkbox" name="album" value="pop">Pop<br>
+						<input type="checkbox" name="album" value="blues">Blues<br>
 					</div>
 					<div id="radio-col2">
-						<input type="checkbox" name="album" value=" ">Jazz<br>
-						<input type="checkbox" name="album" value=" ">Hip Hop<br>
-						<input type="checkbox" name="album" value=" ">Genre 6<br>
+						<input type="checkbox" name="album" value="jazz">Jazz<br>
+						<input type="checkbox" name="album" value="hiphop">Hip Hop<br>
+						<input type="checkbox" name="album" value="classical">Classical<br>
 					</div>	
 					<button type="submit" id="filter-button">Filter</button>
 				</div>
